--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ ul {
     z-index: 11; /* Stay on top */
     top: 0;
     left: 0;
-    background-color: #eee; /* Black*/
+    background-color: #F0F0F0; /* Black*/
     /*padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 	
@@ -100,6 +100,19 @@ ul {
   transform: translate(-50%, 0%);
 	
 	opacity: 1;
+}
+p.who {
+	font-weight: 200;
+	color: #000000;
+	margin-top: 1rem;
+	
+	text-align: left;
+	line-height: 2.7vh;
+	width: 80%;
+	margin: 0 auto;
+}
+p.who span.left {
+	text-align: right;
 }
 p.who span.b {
 	font-weight: 400;
@@ -210,6 +223,13 @@ p.name {
 }
 
 @media only screen and (min-width: 900px) {
+	.container {
+/*
+        -moz-column-count: 3;
+        -webkit-column-count: 3;
+        column-count: 3;
+*/
+	}
 }
 
 a {
@@ -266,17 +286,6 @@ p.space {
 	line-height: 10rem;
 	margin: 0;
 }
-p.who {
-	font-weight: 200;
-	color: #000000;
-	margin-top: 1rem;
-	
-	text-align: left;
-	line-height: 2.7vh;
-	width: 80%;
-	margin: 0 auto;
-}
-
 ul {
   list-style-type: none;
 }
@@ -384,7 +393,7 @@ p.ref1 {
 /*MEDIA QUERY*/
 @media only screen and (max-width : 740px) {
 body, .navSocial {
-	font-size: 2.9vh;
+	font-size: 2.7vh;
 	line-height: 3.5vh;
 	letter-spacing: 0.055vh;
 	color: #111;
