menu position & column

--- a/style.css
+++ b/style.css
@@ -38,16 +38,21 @@ body {
 ul {
   list-style-type: none;
 }
+img, iframe {
+	max-width: 100%;
+	height: auto;
+	display: block;
+}
+
 .lazy {
 	width: 80vw;
 }
-
 .lazyFade {
 }
 
 .sidenav {
 	color: #111;
-    height: 100%; /* 100% Full-height */
+    height: 100vh; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 11; /* Stay on top */
@@ -57,7 +62,7 @@ ul {
     /*padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 	
-    overflow: scroll;
+    overflow: hidden;
 }
 
 /* The navigation menu links */
@@ -95,9 +100,9 @@ ul {
 	line-height: 2.7vh;
 	width: 75%;
 	margin: 0 auto;
-  left: 50%;
-  top: 3rem;
-  transform: translate(-50%, 0%);
+    left: 50%;
+    top: 3rem;
+    transform: translate(-50%, 0%);
 	
 	opacity: 1;
 }
@@ -120,6 +125,40 @@ p.who span.b {
 p.who a {
 	text-shadow: 1px 1px 1px #fff;
 }
+.content {
+	height: 90vh;
+	overflow: auto;
+	top: 9vh;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {	
+	width: auto;
+	left: 2vw;
+	position: fixed;
+	font-weight: 200;
+	text-align: left;
+	color: #000000;
+	display: block;
+	text-shadow: 1px 1px 1px #fff;
+	margin-top: 0rem;
+}
+ul li:nth-of-type(2) {
+	right: 2vw;
+	font-weight: 200;
+	text-align: right;
+}
+li span {
+	border-bottom: 1px solid currentColor; /* Or whatever color you want */
+    text-decoration: none;
+}
+li span:hover {
+	text-decoration: none;
+}
+
 #white {
 /*
 	position: fixed;
@@ -129,11 +168,6 @@ p.who a {
 	background-color: transparent;
 	z-index: -1;
 */
-}
-img, iframe {
-	max-width: 100%;
-	height: auto;
-	display: block;
 }
 #wrapper {
     width: 80vw;
@@ -222,13 +256,17 @@ p.name {
     }
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 1200px) {
 	.container {
-/*
+	    -moz-column-gap: 2.5vw;
+    	-webkit-column-gap: 2.5vw;
+	    column-gap: 2.5vw;
         -moz-column-count: 3;
         -webkit-column-count: 3;
         column-count: 3;
-*/
+	}
+	.item {	
+	    margin: 1vw 0 5vw;
 	}
 }
 
@@ -285,33 +323,6 @@ p.title a:hover {
 p.space {
 	line-height: 10rem;
 	margin: 0;
-}
-ul {
-  list-style-type: none;
-}
-
-li {	
-	width: auto;
-	position: fixed;
-	font-weight: 200;
-	text-align: left;
-	color: #000000;
-	display: block;
-	text-shadow: 1px 1px 1px #fff;
-	margin-top: 0rem;
-}
-ul li:nth-of-type(2) {
-	right: 3rem;
-	font-weight: 200;
-	width: 100%;
-	text-align: right;
-}
-li span {
-	border-bottom: 1px solid currentColor; /* Or whatever color you want */
-    text-decoration: none;
-}
-li span:hover {
-	text-decoration: none;
 }
 
 .navSocial {
@@ -403,9 +414,32 @@ div#header {
 	z-index: 10;
 }
 	
+#wrapper {
+    width: 90vw;
+    margin: 0 auto;
+}
+
+img {
+	width: 90vw;
+	margin: 0 auto;
+	padding: 0;
+	vertical-align: bottom;
+}
+iframe {
+	width: 90vw;
+	height: 50.625vw;
+}
+	.who {
+		padding-top: 1vh;
+	}
+.content {
+	height: 83vh;
+	overflow: auto;
+	top: 15vh;
+}
 p.title {
 	font-weight: 700;
-	left: 10vw;
+	left: 5vw;
 	top: 0;
 	width: 66%;
 	margin: 0;
@@ -468,10 +502,11 @@ p.space {
         transform: translateY(0rem);
 }
 li {	
-	right: 3rem;
+	right: 5vw;
 	text-align: right;
 }
 ul li:nth-of-type(2) {
+	right: 5vw;
 	-webkit-transform: translateY(3.7vh);
         -ms-transform: translateY(3.7vh);
         transform: translateY(3.7vh);
