--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ img, iframe {
 	color: #111;
 	font-weight: 200;
     position: absolute;
-    top: 1.2rem;
+    top: 1.3rem;
     right: 1rem;
     font-size: 3rem;
 	z-index: 99;
@@ -371,6 +371,7 @@ p.space {
 }
 
 .navSocial {
+	width: auto;
 	position: fixed;
 	font-weight: 200;
 	right: 10vw;
@@ -380,6 +381,8 @@ p.space {
 	-webkit-transform: translate(calc(10vw - 2vw), -0.2vh);
         -ms-transform: translate(calc(10vw - 2vw), -0.2vh);
         transform: translate(calc(10vw - 2vw), -0.2vh);
+	
+	z-index: 11;
 }
 
 p.text {	
@@ -518,7 +521,7 @@ p.space {
 }
 .sidenav .closebtn {
     position: absolute;
-    top: 2rem;
+    top: 1.5rem;
     font-size: 3rem;
 	width: 100%;
 	text-align: center;
