--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html {
 	font-size: 62.5%;
 }
 body {
-	background: #ffffff;
+	background: #fdfdfd;
 	font-family: Brown, "Helvetica Neue", Helvetica, Arial, "sans-serif";
   	font-weight: Bold;
 	font-size: 2.0vh;
@@ -206,16 +206,17 @@ li span:hover {
 .container {
     margin: 0vw 0;
     padding: 0;
-    -moz-column-gap: 5vw;
-    -webkit-column-gap: 5vw;
-    column-gap: 5vw;
+    -moz-column-gap: 1.5vw;
+    -webkit-column-gap: 1.5vw;
+    column-gap: 1.5vw;
 }
 
 .item {
+	
     display: inline-block;
     background: transparent;
     padding: 0;
-    margin: 1vw 0 10vw;
+    margin: 1vw 0 1vw;
     width: 100%;
 	height: auto;
 	overflow: hidden;
@@ -232,11 +233,6 @@ li span:hover {
 
 .item img{
 	opacity: 1;
-	
-/*
-  -webkit-filter: blur(3px);
-  filter: blur(3px);
-*/
 	display: block;
 	-o-transition:.2s ease-in-out;
   -ms-transition:.2s ease-in-out;
@@ -251,8 +247,6 @@ li span:hover {
 }
 
 .item :hover img{
-	
-	opacity: 1;
 	-webkit-transform: translateY(2vh);
         -ms-transform: translateY(2vh);
         transform: translateY(2vh);
@@ -298,16 +292,18 @@ p.name {
 
 @media only screen and (min-width: 1200px) {
 	.container {
+/*
 	    -moz-column-gap: 2.5vw;
     	-webkit-column-gap: 2.5vw;
 	    column-gap: 2.5vw;
+*/
         -moz-column-count: 3;
         -webkit-column-count: 3;
         column-count: 3;
 	}
 	
 	.item {	
-	    margin: 1vw 0 5vw;
+	    margin: 1vw 0 3vw;
 	}
 	
 	.content {
@@ -336,19 +332,39 @@ iframe {
 div#header {
 	position: relative;
 	z-index: 10;
-	margin-top: 3rem;
+	/*
+	  Here to change the amount of height from the header to the very top
+	*/
+	margin-top: 3.5rem;
 }
 
 @media screen {
 body>div#header {
 }
 }
+
+div#footer {
+	z-index: 10;
+	height: auto;
+	width: 100%;
+	background-color: transparent;
+	
+  	font-weight: 200;
+	font-size: 1.6vh;
+	text-align: left;
+	line-height: 2.16vh;
+	letter-spacing: 0.056vh;
+	color: #666;
+	text-align: center;
+	padding: 5rem 0 1rem 0;
+	
+}
 p.title {
+	
 	z-index: -1;
 	color: #111;
 	font-weight: 700;
 	position: absolute;
-/*	top: 0.5vw;*/
 	left: 10vw;
 	width: 90vw;
 	margin: 0;
@@ -406,7 +422,7 @@ p.text {
 
 #top_space {
 	width: 100%;
-	height: 10vh;
+	height: 5vh;
 }
 img {
 	width: 80vw;
@@ -530,11 +546,21 @@ p.space {
 	right: 0;
 }
 .item img{
+/*
+	-webkit-filter: blur(0px);
+  filter: blur(0px);
+*/
+
 	-webkit-transform: translateY(0rem);
         -ms-transform: translateY(0rem);
         transform: translateY(0rem);	
 }
 .item :hover img{
+/*
+	-webkit-filter: blur(0px);
+  filter: blur(0px);
+*/
+	
 	-webkit-transform: translateY(0rem);
         -ms-transform: translateY(0rem);
         transform: translateY(0rem);
